  local filename when downloading a web resource
- normtest() function: add option to include all available
  tests in the returned matrix
- int() function: return NA if the integer part of the argument
  lies beyond the range of a 32-bit signed integer
- instring() and strstr() functions: drop the policy of auto-
  escaping the string to be found
- CSV data importation: be less hasty in concluding that the
  column separator is comma
- CSV importation via GUI: clarify the dialog that governs
  how the first column is treated; also don't show any string
  tables at the moment of importation (strings tables can now
  be accessed under the Data menu)
- "join" via the GUI: make it evident that specifying keys
  may not be necessary with time-series data; fix a bug with
  use of the filter option
- "system" command: ensure that the $system bundle includes
  the sample limits as "sample_t1" and "sample_t2"
- Script editor, split pane: ensure that when line-numbering
  is selected it carries over to the new pane; also improve
  tab-completion for names of functions
- Drag and drop of data file onto gretl: offer a choice of
  replacing or trying to append to the current dataset
- Fix error message for invalid (string) array index
- Fix error message for missing function-package dependency
- Fix bug: buffer overrun when creating names for transformed
  series if the original series has a very long name
- Fix bug: crash on doing "pkg install" from the command line
  when the window listing function packages on the server is
  displayed at the time
- Fix bug: possible false positive when checking for duplicate
  function packages
- Fix bug: the weekday() function could produce an off-by-one
  error in some cases
- Fix for detection of the R executable when called via a
  foreign block on macOS
- configure/build apparatus: add support for using Intel's
  oneAPI and MKL, or libblis + libflame, for BLAS and LAPACK
  functionality